# core

./: .gitignore  db.sqlite3  pyproject.toml  readme.md  todo.md
docker/: Dockerfile  db.env  docker-compose.yml  nginx.conf
hack/: settings.py  settings_production.py  urls.py
main/: apps.py  auth_backend.py  urls.py
main/admin/: custom.py  full.py
main/migrations/: 0002_customuser_type.py  0003_auto_20190927_1957.py  0004_auto_20190927_2003.py  0005_customuser_nickname.py  0006_auto_20190928_1841.py
main/models/: user.py
main/serializers/: token.py  user.py
main/views/: __init__.py  profile.py  user.py
questionnaire/: admin.py  urls.py
questionnaire/jobs/: sentiment.py
questionnaire/migrations/: 0001_initial.py  0002_auto_20190927_1853.py  0003_auto_20190927_1858.py  0004_auto_20190927_1914.py  0005_auto_20190927_1917.py  0006_auto_20190927_1937.py  0007_auto_20190927_1957.py  0008_auto_20190927_2138.py  0009_auto_20190927_2230.py  0010_news.py  0011_auto_20190928_0146.py  0012_discussion_preview.py  0013_auto_20190928_2255.py
questionnaire/models/: __init__.py  answer.py  answer_variant.py  comment.py  discussion.py  like.py  news.py  question.py  topic.py
questionnaire/serializers/: answer_variant.py  comment.py  discussion.py  news.py  question.py  topic.py
questionnaire/templates/questionnaire/: chart.html
questionnaire/views/: __init__.py  charts.py  comments.py  discussions.py  news.py  questions.py  topics.py
